@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Refresh current folder in opener window after draft save or message sent (#1488997)
 - Fix saving draft just after entering compose window (#1489012)
 - Fix javascript error in IE9 when loading form with placeholders into an iframe (#1489008)
 - Fix handling of some conditional comment tags in HTML message (#1489004)
